Avoid showing inner image overflow

--- a/src/client/ui/components/shared/card/Card.module.css
+++ b/src/client/ui/components/shared/card/Card.module.css
@@ -1,4 +1,5 @@
 .Card {
+  overflow: hidden;
   background-color: #ffffff;
   width: 150px;
   height: 150px;
